removed scopes names from prgram.cs

--- a/ResourceOwnerPassword/App.config
+++ b/ResourceOwnerPassword/App.config
@@ -27,5 +27,6 @@
     <add key="ClientId" value=""/>
     <add key="UserName" value=""/>
     <add key="Password" value=""/>
+    <add key="Scopes" value=""/>
   </appSettings>
 </configuration>
